[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scripts/Menus/menu_settings.gd" type="Script" id=1]
[ext_resource path="res://Data/Graphics/Abstract/double_octagon.png" type="Texture" id=2]
[ext_resource path="res://Data/Graphics/Abstract/square_empty.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Menus/menu_settings_game.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Menus/menu_settings_controls.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="Animation" id=5]

resource/name = "idle"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Double Octagon1:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Double Octagon2:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Square1:transform/rot")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 45.0, 135.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Square2:transform/rot")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 3 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 45.0, -45.0 ]
}

[sub_resource type="Animation" id=6]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("game:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1040, 280 ), Vector2( 760, 280 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("game:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("controls:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 10, -400 ), Vector2( 10, 20 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("controls:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=7]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("game:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 760, 280 ), Vector2( 1040, 280 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("game:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.5, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("controls:rect/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 10, 20 ), Vector2( 10, -400 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("controls:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 0.5, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Settings" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Main" type="CenterContainer" parent="."]

rect/min_size = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 220.0
margin/top = 2.0
margin/right = 796.0
margin/bottom = 578.0
use_top_left = false

[node name="SettingsButton" type="Button" parent="Main"]

rect/min_size = Vector2( 235, 235 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 170.0
margin/top = 170.0
margin/right = 405.0
margin/bottom = 405.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = true

[node name="Double Octagon2" type="Sprite" parent="Main"]

transform/pos = Vector2( 288, 288 )
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
modulate = Color( 0.4, 0.1, 0.0980392, 1 )

[node name="Double Octagon1" type="Sprite" parent="Main"]

transform/pos = Vector2( 288, 288 )
transform/scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
modulate = Color( 0.6, 0.15, 0.0980392, 1 )

[node name="Square2" type="Sprite" parent="Main"]

visibility/opacity = 0.5
transform/pos = Vector2( 288, 288 )
transform/rot = 45.0
transform/scale = Vector2( 1.7, 1.7 )
texture = ExtResource( 3 )
modulate = Color( 0.6, 0.4, 0.2, 1 )

[node name="Square1" type="Sprite" parent="Main"]

visibility/opacity = 0.6
transform/pos = Vector2( 288, 288 )
transform/rot = 45.0
transform/scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 3 )
modulate = Color( 0.7, 0.5, 0.3, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/idle = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "idle"

[node name="game" parent="." instance=ExtResource( 4 )]

visibility/opacity = 0.0
margin/left = 1040.0
margin/top = 280.0
margin/right = 1290.0
margin/bottom = 490.0

[node name="controls" parent="." instance=ExtResource( 5 )]

visibility/opacity = 0.0
margin/left = 10.0
margin/top = -400.0
margin/right = 314.0
margin/bottom = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/settings_enter = SubResource( 6 )
anims/settings_exit = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false


